FindBugs: DM_NUMBER_CTOR in Network.java fixed